spacing issue in about me

--- a/style.css
+++ b/style.css
@@ -88,7 +88,8 @@ img {
   text-align: center; }
 
 #about_me p {
-  padding: 20px; }
+  padding: 20px;
+  text-align: center; }
 #about_me h3 {
   font-family: Arvo; }
 
